# Technoatom

./: .gitignore  README.md  my_dump.h  stack_class.h  stack_test  stack_test.cpp
CPU/: CMakeLists.txt  CPU_class.h  CPU_class.hpp  cmd_codes.h  main.cpp
Translator/: CMakeLists.txt  main.cpp
logs/: dump1489258390.txt  dump1489312795.txt  dump1489312951.txt
print_lib/: CMakeLists.txt  main  main.cpp  print.h
smart_pointers/: CMakeLists.txt  main.cpp  smart_pointers.h
stack_class/: CMakeLists.txt  StackTest  StackTest.cpp  dump.txt  dump1488572831.txt  main.cpp  stack_class.cpp  stack_class.h  stack_class.hpp
vector_class/: CMakeLists.txt  dump1491471132.txt  vector_class.cpp  vector_class.h  vector_class.hpp  vector_test.cpp
